# BulletHellMaker

./: .Makefile  .gitignore  .travis.yml  CMakeLists.txt  FeministKillBot_normal.html  Flatshot  Makefile  MakefileMingW  MakefileVisual  README  README.md  STG.cbp  STG.cpp  STG.depend  STG.h  STG.layout  STG.layout.cbTemp  Sources.mk  Training1  Training2  Training3  Training4  Training5  config.xml~  demo.mpg  libSDL2.dylib  libSDL2_image.dylib  libSDL2_mixer.dylib  libSDL2_ttf.dylib  librosalila.dylib  main.cpp  scores.html  shmup  shmup_config.sh  shmup_init.sh  shmup_optirun.sh
.github/workflows/: ci.yml
Character/: Bullet.cpp  Bullet.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Pattern.cpp  Pattern.h  Player.cpp  Player.h
RosalilaShooter/: STG.cpp  STG.h
RosalilaShooter/Character/: Bullet.cpp  Bullet.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Modifier.cpp  Pattern.cpp  Pattern.h  Player.cpp  Player.h
RosalilaShooter/Menus/: ControllerConfig.cpp  ControllerConfig.h  Intro.cpp  Intro.h  StageModsSelect.cpp  StageModsSelect.h  StageSelect.cpp  StageSelect.h  TextInput.cpp
RosalilaShooter/Stage/: Layer.cpp  Layer.h  LayerFrame.cpp  LayerFrame.h  Stage.cpp  Stage.h
RosalilaShooter/Utility/: Utility.cpp  Utility.h
STGMenu/: ControllerConfig.cpp  ControllerConfig.h  Intro.cpp  Intro.h  STGMenu.cpp  STGMenu.h  StageSelect.cpp  StageSelect.h
STGUtility/: STGUtility.cpp  STGUtility.h
Spells/: Bullet.cpp  Bullet.h  Hitbox.cpp  Hitbox.h  Pattern.cpp  Pattern.h
Stage/: Dialogue.cpp  Dialogue.h  Layer.cpp  Layer.h  Stage.cpp  Stage.h
assets/: README.md  config.json
assets/misc/: config.xml  inputs.xml
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
controller_config/: game_actions_517510.vdf
include/: STG.h  dirent.cpp
include/Character/: Bullet.h  Character.h  Enemy.h  Modifier.h  Pattern.h  Player.h  VariableChange.h
include/GLM/: glm.h
include/IA/: Automata.h  Transicion.h
include/Input/: Receiver.h
include/Log/: Log.h
include/Menu/: Elemento.h  Menu.h  MenuBarra.h  MenuBoton.h  MenuCharSelect.h  MenuContenedor.h  MenuImagen.h  MenuLista.h  (+1 more)
lib/: rosalila.lib
src/: STG.cpp  dirent.cpp
(+82 files in other folders)
